--- a/015-user-input/index.html
+++ b/015-user-input/index.html
@@ -12,14 +12,15 @@
     <h1>Geting User Input</h1>
     <form id="form-input">
         <div>
-            <labels>Miles: <input id = "miles" name = "miles" type="text"></labels>
+            <labels>Miles: <input id = "miles" name = "miles" type="text" required></labels>
         </div>
         <div>
-            <labels>Gallons: <input id = "gallons" name = "gallons" type="text"></labels>
+            <labels>Gallons: <input id = "gallons" name = "gallons" type="text" required></labels>
         </div>
         <div>
-            <labels>Price: <input id = "price" name = "price" type="text"></labels>
+            <labels>Price: <input id = "price" name = "price" type="text" required></labels>
         </div>
+        <button>Submit</button>
     </form>
     <div id="output"></div>
 </body>
