--- a/016-form-validation/index.html
+++ b/016-form-validation/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class = "centered">
-        <div id = "err"></div>
+        <div id = "err" class="error"></div>
         <form id="form-input"\>
             <h1>Getting User Input</h1>
 
