--- a/016-form-validation/index.html
+++ b/016-form-validation/index.html
@@ -17,13 +17,13 @@
             <h1>Getting User Input</h1>
 
             <div>
-                <labels>Miles: <input id="miles" name="miles" type="number" required></labels>
+                <labels><input id="miles" name="miles" type="number" required placeholder = "Miles "></labels>
             </div>
             <div>
-                <labels>Gallons: <input id="gallons" name="gallons" type="number" required></labels>
+                <labels><input id="gallons" name="gallons" type="number" required placeholder = "Gallons "></labels>
             </div>
             <div>
-                <labels>Price: <input id="price" name="price" type="number" required></labels>
+                <labels><input id="price" name="price" type="number" required placeholder = "Price "></labels>
             </div>
             <button>Submit</button>
         </form>
