--- a/021-creating-table-w-code/index.html
+++ b/021-creating-table-w-code/index.html
@@ -21,7 +21,7 @@
             <button>Submit</button>
         </form>
         <div id="output"></div>
-        <table>
+      <!--  <table>
             <tr>
                 <th>Test1</th>
                 <th>Test1</th>
@@ -38,7 +38,11 @@
                 <td>Test 2</td>
                 <td>Test 2</td>
             </tr>
-        </table>
+        </table> -->
+        <div id ="table-out">
+
+        </div>
+
         <div id="output-avg"></div>
     </div>
 </body>
