--- a/024-modules/index.html
+++ b/024-modules/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mileage Program</title>
     <link rel="stylesheet" href="style.css">
-    <script type ="module" src="render.js"></script>
+    <script type="module" src="render.js"></script>
+    <script type="module" src="handleinput.js"></script>
     <script type="module" src="main.js"></script>
 </head>
 
@@ -22,11 +23,8 @@
             <button>Submit</button>
         </form>
         <div id="output"></div>
-
-        <div id ="table-out">
-
+        <div id="table-out">
         </div>
-
         <div id="output-avg"></div>
     </div>
 </body>
