--- a/025-DOM-selectors/index.html
+++ b/025-DOM-selectors/index.html
@@ -17,9 +17,9 @@
         <div id="err" class="error"></div>
         <form id="form-input">
             <h1>MPG and Trip Cost Calculator</h1>
-            <labels><input id="miles" name="miles" step="any" type="int" required placeholder="Enter Miles"></labels>
-            <labels><input id="gallons" name="gallons" step="any" type="int" required placeholder="Enter Gallons"></labels>
-            <labels><input id="price" name="price" step = "any" type="int" required placeholder="Enter Price"></labels>
+            <labels><input id="miles" name="miles" step=".01" type="number" required placeholder="Enter Miles"></labels>
+            <labels><input id="gallons" name="gallons" step=".01" type="number" required placeholder="Enter Gallons"></labels>
+            <labels><input id="price" name="price" step=".01" type="number" required placeholder="Enter Price"></labels>
             <button>Submit</button>
         </form>
         <div id="output"></div>
